@@ -1,38 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form string="Rule">
-  <label name="name"/>
-  <field name="name"/>
-  <label name="short_name"/>
-  <field name="short_name"/>
-  <label name="type_"/>
-  <field name="type_"/>
-  <label name="context"/>
-  <field name="context"/>
-  <label name="status"/>
-  <field name="status"/>
-  <notebook>
-    <page name="algorithm">
-      <field name="algorithm" widget="source" context_tree="data_tree" colspan="4" xexpand="1" xfill="1"/>
-      <label name="extra_data"/>
-      <field name="extra_data" xalign="0" colspan="1"/>
-      <label name="extra_data_kind"/>
-      <field name="extra_data_kind" xexpand="1"/>
-      <field name="rules_used" colspan="4"/>
-      <field name="tables_used" colspan="4"/>
-      <field name="parameters" view_ids="rule_engine.parameter_tree,rule_engine.parameter_form" colspan="4"/>
-    </page>
-    <page name="tags">
-      <field name="tags" colspan="4"/>
-    </page>
-    <page name="test_cases">
-      <field name="test_cases" colspan="4"/>
-    </page>
-    <page name="debug_mode" col="2">
-      <label name="debug_mode"/>
-      <field name="debug_mode"/>
-      <field name="exec_logs" colspan="2"/>
-    </page>
-  </notebook>
-  <newline/>
-  <field name="data_tree" invisible="1"/>
+    <label name="name"/>
+    <field name="name"/>
+    <label name="short_name"/>
+    <field name="short_name"/>
+    <label name="type_"/>
+    <field name="type_"/>
+    <label name="context"/>
+    <field name="context"/>
+    <label name="status"/>
+    <field name="status"/>
+    <label name="debug_mode"/>
+    <field name="debug_mode"/>
+    <notebook>
+        <page name="algorithm">
+            <field name="algorithm" widget="source" context_tree="data_tree" colspan="4" xexpand="1" xfill="1"/>
+            <label name="extra_data"/>
+            <field name="extra_data" xalign="0" colspan="1"/>
+            <label name="extra_data_kind"/>
+            <field name="extra_data_kind" xexpand="1"/>
+            <field name="rules_used" colspan="4"/>
+            <field name="tables_used" colspan="4"/>
+            <field name="parameters" view_ids="rule_engine.parameter_tree,rule_engine.parameter_form" colspan="4"/>
+        </page>
+        <page name="tags">
+            <field name="tags" colspan="4"/>
+        </page>
+    </notebook>
+    <newline/>
+    <field name="data_tree" invisible="1"/>
 </form>
