@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<tree string="Rules" colors="If(~Eval('passing_test_cases', False), 'red', 'green')">
+<tree string="Rules" colors="If(~Eval('passing_test_cases' , False) | Bool(Eval('debug_mode')), 'red', 'black')">
     <field name="type_"/>
     <field name="name"/>
     <field name="context"/>
     <field name="status"/>
+    <field name="debug_mode"/>
     <field name="tags_name"/>
     <field name="passing_test_cases" tree_invisible="1"/>
 </tree>
