@@ -1,3 +1,7 @@
+* Add calculation date to rule engine log to retrieve more easily the good log
+* Execution logs are no more automatically deleted when the debug mode is removed
+* Move test case and execution logs to relate
+
 Version 1.3 - 2015-01-22
 * Improve performances with cache
 
